<resources>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Back4App -->
    <string name="back4app_app_id">5U9qKwkRSWcMuA8M17RchV5T74fAhReHdLXubgAC</string>
    <string name="back4app_client_key">tjJ3ZdugCqYOFNmAy1uQ174aLye3ATaaqALesi4M</string>
    <!-- Back4App -->


    <string name="app_name">Habit Pal</string>
    <string name="title">Habit Pal</string>
    <string name="log_in">Log In</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="email_hint">email@example.com</string>
    <string name="name_hint">John Smith</string>
    <string name="language">Language</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="terms">Terms</string>
    <string name="log_out">Log Out</string>
    <string name="type">Type</string>
    <string name="progress">Progress</string>
    <string name="description">Description</string>
    <string name="habit_type_header">I have a habit to…</string>
    <string name="habit_describe_hint">Describe the habit</string>
    <string name="form">Form</string>
    <string name="quit">Quit</string>
    <string name="add_habit">Add Habit</string>
    <string name="home">Home</string>
    <string name="my_habits">My Habits</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="feed">Feed</string>
    <string name="my_profile">My Profile</string>
    <string name="habit_description_header">I want to…</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>
    <string name="change_password">Change Password</string>
    <string name="_break">Break</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">qMhDKVHmsg3GJ01zd9OBbk7p3Y3m9WyRPAZOoC6r</string>
    <string name="back4app_client_key">zt3UJMjLiOlIzW8vtSbjNaPD76KsrVfjduEJSxtG</string>
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="notification_settings">
        <item>Always on</item>
        <item>Rest for 1 hour</item>
        <item>Rest for 3 hours</item>
        <item>Rest for 6 hours</item>
        <item>Rest for 24 hours</item>
        <item>Always off</item>
    </string-array>
</resources>