<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addhabit_screen_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addhabit_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".activities.MainActivity">

        <TextView
            android:id="@+id/text_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_24sdp"
            android:fontFamily="cursive"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:shadowColor="@color/colorShadow"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/habit_type_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_form"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardBackgroundColor="@color/colorText"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:layout_constraintStart_toStartOf="@+id/text_type"
            app:layout_constraintTop_toBottomOf="@+id/text_type">

            <TextView
                android:id="@+id/text_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/nova_round"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/form"
                android:textAllCaps="true"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_quit"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_50sdp"
            app:cardBackgroundColor="#0082C22E"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@+id/text_type"
            app:layout_constraintTop_toTopOf="@+id/btn_form">

            <TextView
                android:id="@+id/text_break"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:fontFamily="@font/nova_round"
                android:gravity="center"
                android:letterSpacing="0.05"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/_break"
                android:textAllCaps="true"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="cursive"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:shadowColor="@color/colorShadow"
            android:shadowDy="5"
            android:shadowRadius="5"
             android:text="@string/habit_description_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/text_type"
            app:layout_constraintRight_toRightOf="@id/text_type"
            app:layout_constraintTop_toBottomOf="@id/btn_form" />

        <com.group4.habitpal.custom_views.CustomEditTextContainer
            android:id="@+id/description_container"
            android:layout_width="0dp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_5sdp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@id/text_description"
            app:layout_constraintStart_toStartOf="@id/text_description"
            app:layout_constraintTop_toBottomOf="@id/text_description">

            <EditText
                android:id="@+id/field_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:fontFamily="@font/nova_round"
                android:gravity="start"
                android:hint="@string/habit_describe_hint"
                android:inputType="textMultiLine"
                android:letterSpacing="0.05"
                android:maxLength="300"
                android:padding="@dimen/_15sdp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.group4.habitpal.custom_views.CustomEditTextContainer>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_add_bg"
            android:layout_width="0dp"
            android:layout_height="@dimen/_57sdp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@color/colorAccentDark"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="@+id/btn_add"
            app:layout_constraintStart_toStartOf="@+id/btn_add"
            app:layout_constraintTop_toTopOf="@+id/btn_add">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/nova_round"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/add_habit"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

        <com.group4.habitpal.custom_views.CustomAppButton
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="@dimen/_57sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:tag="@string/add_habit"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/text_description"
            app:layout_constraintStart_toStartOf="@id/text_description"
            app:layout_constraintTop_toBottomOf="@+id/description_container">

            <TextView
                android:id="@+id/text_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/nova_round"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:tag="@string/add_habit"
                android:text="@string/add_habit"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textColor="@color/colorTextDark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.group4.habitpal.custom_views.CustomAppButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>