<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_110sdp"
        android:layout_marginRight="@dimen/_24sdp"
        android:fontFamily="cursive"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/email"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/email_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#EDEDED"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@id/text_email"
        app:layout_constraintStart_toStartOf="@id/text_email"
        app:layout_constraintTop_toBottomOf="@id/text_email">

        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="#00FFFFFF"
            android:fontFamily="@font/nova_round"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:letterSpacing="0.05"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="cursive"
        android:paddingStart="@dimen/_15sdp"
        android:paddingEnd="@dimen/_15sdp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/text_email"
        app:layout_constraintRight_toRightOf="@id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/email_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/password_container"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#EDEDED"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@id/text_email"
        app:layout_constraintStart_toStartOf="@id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/text_password">

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints=""
            android:background="#00FFFFFF"
            android:fontFamily="@font/nova_round"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:letterSpacing="0.05"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login_bg"
        android:layout_width="0dp"
        android:layout_height="@dimen/_57sdp"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/colorAccentSecondaryDark"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@id/text_email"
        app:layout_constraintStart_toStartOf="@id/text_email"
        app:layout_constraintTop_toTopOf="@+id/btn_login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/nova_round"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/log_in"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/_57sdp"
        android:layout_marginTop="@dimen/_85sdp"
        app:cardBackgroundColor="@color/colorAccentSecondary"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@id/text_email"
        app:layout_constraintStart_toStartOf="@id/text_email"
        app:layout_constraintTop_toBottomOf="@+id/password_container">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="@font/nova_round"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:tag="@string/log_in"
            android:text="@string/log_in"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>